# Game

./: .gitignore  CMakeLists.txt  main.cpp
Engine/: Animation.cpp  Animation.hpp  AssetsManager.hpp  CheckKey.cpp  CheckKey.hpp  Collision.cpp  Collision.hpp  CollisionBox.cpp  CollisionBox.hpp  FixedClock.hpp  Timer.cpp  Timer.hpp
Game/: Game.cpp  Game.hpp  Platform.cpp  Platform.hpp  main.cpp
Game/AliveObjects/: Bullet.cpp  Bullet.hpp  Entity.cpp  Entity.hpp  Heart.cpp  Heart.hpp  Player.cpp  Player.hpp
Game/StateMachine/: StateMachine.cpp  StateMachine.hpp
Game/StateMachine/States/: AllStates.hpp  Button.hpp  EndScreen.cpp  EndScreen.hpp  InGame.cpp  InGame.hpp  InMenu.cpp  InMenu.hpp  InPause.cpp
Game/UI/: Button.hpp  HealthBar.cpp  HealthBar.hpp
include/: Platform.hpp  Visual.hpp
source/: Platform.cpp  Visual.cpp  main.cpp
